# biazmark

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  fly.toml  pyproject.toml  railway.toml
backend/app/: __init__.py  agents.py  api.py  config.py  db.py  llm.py  logging_config.py  main.py  pipeline.py  prompts.py  research.py  schemas.py  vault.py  worker.py
backend/app/connectors/: __init__.py  _stub_helpers.py  base.py  blog.py  email.py  google_ads.py  linkedin.py  meta.py  preview.py  tiktok.py  x.py
backend/app/media/: __init__.py  base.py  openai.py  placeholder.py  replicate.py  stability.py
backend/app/oauth/: __init__.py  base.py  google.py  linkedin.py  manager.py  meta.py  tiktok.py  x.py
backend/tests/: test_pipeline.py  test_smoke.py
frontend/: .env.production.example  .vercelignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/install/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/components/: AmbientBackground.tsx  AnimatedCounter.tsx  BackendBanner.tsx  CopyButton.tsx  FloatingOrbs.tsx  IconBadge.tsx  MagneticButton.tsx  Parallax.tsx  Reveal.tsx  SplitText.tsx  TextScramble.tsx  TiltCard.tsx  Typewriter.tsx
frontend/lib/: api.ts
frontend/public/: Biazmark.apk  install.bat  install.ps1  install.sh
mobile/: .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json
mobile/resources/: README.md
mobile/www/: index.html
scripts/: build-mobile-apk.sh  deploy-backend-fly.sh  generate-secret.sh  seed_demo.py
(+8 files in other folders)
