[project]
name = "biazmark-backend"
version = "0.1.0"
description = "Biazmark — autonomous marketing backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "arq>=0.26.3",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "tenacity>=9.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "selectolax>=0.3.27",
    "orjson>=3.10.12",
    "structlog>=24.4.0",
    "pytrends>=4.9.2",
    "cryptography>=43.0.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line length handled by formatter, not linter
    "B008",    # `Depends(...)` in defaults is the standard FastAPI idiom
    "N817",    # allow short aliases like `as RR` in tests
    "RUF012",  # mutable class attrs — pedantic, existing pattern throughout
    "UP042",   # StrEnum migration — cosmetic, Tier(str, Enum) is fine
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
